--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Khaled Elgamely - Portfolio Website</title>
+  <title>Vivek Tripathi - Portfolio Website</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -54,11 +54,11 @@
   <!-- ======= home Section ======= -->
   <section id="home" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
-      <h1>Khaled Elgamely</h1>
-      <p>I'm a <span class="typed" data-typed-items="Web Developer, Programmer, Software Engineer"></span></p>
+      <h1>Vivek Trpathi</h1>
+      <p>I'm a <span class="typed" data-typed-items="Web Developer, Programmer, Wordpress Developer"></span></p>
       <div class="social-links">
-        <a href="https://www.linkedin.com/in/khalid-elgamely-874470242/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://github.com/khaledelgamely" class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://www.linkedin.com/in/vivek-tripathi-4a0a72249" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/VivekTripathi0405" class="github"><i class="bx bxl-github"></i></a>
       </div>
     </div>
   </section><!-- End home -->
@@ -71,37 +71,34 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hi Everyone, I am Khaled Elgamely from cairo , Egypt I am a junior Front End Developer.
-            Building resposive website, I am experienced with Front-end Web development and design using ReactJS, HTML, and CSS,
-            My interests also lie in solving problems related to data structures and algorithms.</p>  
+          <p>Hi Everyone, I am Vivek Tripathi From mumbai, India I am a fresher web Developer.
+            Building resposive website, I am experienced with Front-end Web development and design using PHP, HTML, and CSS,
+            My interests also lie in solving problems, website testing and Wordpress Developer.</p>  
         </div>
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/png.png" class="img-fluid" alt="">
+            <img src="assets/img/portimg.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Software Engineer &amp; Front-End Web Developer.</h3>
+            <h3>Front End Web Developer &amp; Wordpress Developer.</h3>
             <p class="font-italic">
               This website is an opportunity to demonstrate a portfolio of information about me and to provide further
-              information (via links) about my work.
+              information about my work.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+201552600743</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>khaledelgamely50@gmail.com</span>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+919321808120</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>vivektripathi1095@gmail.com</span>
                   </li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
-                    <span>khaledelgamely.netlify.app</span>
-                  </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>College:</strong> <span>faculty of clinical pharmacy</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>cairo, egypt</span>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Diploma in information technology</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>College:</strong> <span>Thakur Polytechnic</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Mumbai, India</span>
                   </li>
                 </ul>
               </div>
@@ -127,7 +124,7 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Redux Toolkit <i class="val">90%</i></span>
+              <span class="skill">HTML/CSS <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -135,7 +132,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Javascript<i class="val">85%</i></span>
+              <span class="skill">PHP<i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -143,7 +140,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">HTML/CSS <i class="val">90%</i></span>
+              <span class="skill">Wordpress <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -155,7 +152,7 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">ReactJS <i class="val">90%</i></span>
+              <span class="skill">c/c++ <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -163,7 +160,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Material ui <i class="val">80%</i></span>
+              <span class="skill">Figma <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -189,22 +186,20 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
-              <h4>Khaled Elgamely</h4>
-              <p><em>Hi Everyone, I am Khaled Elgamely from cairo , Egypt I am a junior Front End Developer.
-                Building resposive website, I am experienced with Front-end Web development and design using ReactJS, HTML, and CSS,
-                My interests also lie in solving problems related to data structures and algorithms.</em></p>
+              <h4>Vivek Tripathi</h4>
+              <p><em>Hi everyone, I am Vivek Tripathi from Mumbai, India. I am a web developer with experience in designing and developing responsive websites, error resolution, and team collaboration. I hold a diploma in Information Technology from Thakur Polytechnic, Mumbai. I have interned at Bridgekash International Pvt. Ltd. and have been actively involved in extracurricular activities, including event coordination for the Indian Society for Technical Education. My skills include C/C++, JavaScript, HTML/CSS, SQL, and more.</em></p>
               <ul>
-                <li>Cairo, Egypt</li>
-                <li>+201552600743</li>
-                <li>kahledelgamely50@gmail.com</li>
+                <li>Mumbai, India</li>
+                <li>+919321808120</li>
+                <li>vivektripathi1095@gmail.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor of clinical, pharmacy</h4>
-              <h5>2014 - 2019</h5>
-              <p><em>Clinical Pharmacy</em></p>
+              <h4>Diploma in Indformation Technology</h4>
+              <h5>2021 - 2024</h5>
+              <p><em>Information Technology</em></p>
             </div>
           </div>
 
@@ -212,21 +207,15 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Certificates</h3>
             <div class="resume-item">
-              <h4>Front-end web development professional nanodegree</h4>
-              <h5>May 2022 - July 2022</h5>
-              <p><em> fwdEgypt, Udacity </em></p>
+              <h4>Web Development Bootcamp</h4>
+              <h5>jan 2023 - July 2023</h5>
+              <p><em> Udemy </em></p>
             </div>
             <div class="resume-item">
-              <h4>Front-End Web Development with React</h4>
-              <h5>Mar 2022 - Apr 2022</h5>
-              <p><em> Coursera </em></p>
+              <h4>Internship in Artificial Intelligence</h4>
+              <h5>july 2024 - Present</h5>
+              <p><em> Internship Studio </em></p>
             </div>
-            <div class="resume-item">
-              <h4>HTML, CSS, and Javascript for Web Developers</h4>
-              <h5>Sep 2021 - Oct 2021</h5>
-              <p><em> Coursera </em></p>
-            </div>
-
             
           </div>
         </div>
@@ -250,11 +239,11 @@
               <div class="portfolio-wrap">
                 <img src="assets/img/screen3.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Airbnb Clone</h4>
+                  <h4>Darjeeling Welfare Society</h4>
                   <div class="portfolio-links">
                     <a href="assets/img/screen4.png" data-gallery="portfolioGallery"
-                      class="portfolio-lightbox" title="the best airbnb clone which allows you to choose a property from 100s of options. choose your dates and pay with visa"><i class="bx bx-search"></i></a>
-                    <a href="https://airbnbbclone.netlify.app/" class="portfolio-details-lightbox" data-glightbox="type: external"
+                      class="portfolio-lightbox" title="darjeelingwelfaresociety"><i class="bx bx-search"></i></a>
+                    <a href="https://darjeelingwelfaresociety.com/" class="portfolio-details-lightbox" data-glightbox="type: external"
                       title=""><i class="bx bx-link"></i></a>
                   </div>
                 </div>
@@ -282,11 +271,11 @@
               <div class="portfolio-wrap">
                 <img src="assets/img/2023-01-31 (9).png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Banking Website</h4>
+                  <h4>Replica Website of Arcitech</h4>
                   <div class="portfolio-links">
                     <a href="assets/img/2023-01-31 (13).png" data-gallery="portfolioGallery"
                       class="portfolio-lightbox" title="website for a fictional bank with main focus on ui ux."><i class="bx bx-search"></i></a>
-                    <a href="https://bankingweb.netlify.app/" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    <a href="https://architech84.wordpress.com/" class="portfolio-details-lightbox" data-glightbox="type: external"
                       title=""><i class="bx bx-link"></i></a>
                   </div>
                 </div>
@@ -330,7 +319,7 @@
                   <h4>Portfolio</h4>
                   <div class="portfolio-links">
                     <a href="assets/img/2022-12-26.png" data-gallery="portfolioGallery"
-                      class="portfolio-lightbox" title="This website is an opportunity to demonstrate a portfolio of information about me and to provide further information (via links) about my work."><i class="bx bx-search"></i></a>
+                      class="portfolio-lightbox" title="This website is an opportunity to demonstrate a portfolio of information about me and to provide further information  about my work."><i class="bx bx-search"></i></a>
                     <a href="https://khaledelgamely.netlify.app" class="portfolio-details-lightbox" data-glightbox="type: external"
                       title="Portfolio Details"><i class="bx bx-link"></i></a>
                   </div>
@@ -411,7 +400,7 @@
             <div class="contact-address">
               <i class="bi bi-geo-alt"></i>
               <h3>Address</h3>
-              <address>Cairo,EGYPT</address>
+              <address>Mumbai, India</address>
             </div>
           </div>
 
@@ -419,7 +408,7 @@
             <div class="contact-phone">
               <i class="bi bi-phone"></i>
               <h3>Phone Number</h3>
-              <p>+201552600743</a></p>
+              <p>+919321808120</a></p>
             </div>
           </div>
 
@@ -427,7 +416,7 @@
             <div class="contact-email">
               <i class="bi bi-envelope"></i>
               <h3>Email</h3>
-              <p>khaledelgamely50@gmail.com</a></p>
+              <p>vivektripathi1095@gmail.com</a></p>
             </div>
           </div>
 
@@ -438,11 +427,11 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h4>Khaled Elgamely</h4>
+      <h4>Vivek Tripathi</h4>
       <p>This is my Portfolio Website.</p>
       <div class="social-links">
-        <a  href="https://github.com/khaledelgamely"  class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://www.linkedin.com/in/khalid-elgamely-874470242/"class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a  href="https://github.com/VivekTripathi0405"  class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://www.linkedin.com/in/vivek-tripathi-4a0a72249"class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         <strong><span>Thank you for stopping by.</span></strong>
