--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Figma <i class="val">80%</i></span>
+              <span class="skill">Figma <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -187,7 +187,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Vivek Tripathi</h4>
-              <p><em>Hi everyone, I am Vivek Tripathi from Mumbai, India. I am a web developer with experience in designing and developing responsive websites, error resolution, and team collaboration. I hold a diploma in Information Technology from Thakur Polytechnic, Mumbai. I have interned at Bridgekash International Pvt. Ltd. and have been actively involved in extracurricular activities, including event coordination for the Indian Society for Technical Education. My skills include C/C++, JavaScript, HTML/CSS, SQL, and more.</em></p>
+              <p><em>Hi everyone, I am Vivek Tripathi from Mumbai, India. I am a web developer with experience in designing and developing responsive websites, error resolution, and team collaboration. I hold a diploma in Information Technology from Thakur Polytechnic, Mumbai. I have interned at Bridgekash International Pvt. Ltd. and have been actively involved in extracurricular activities, including event coordination for the Indian Society for Technical Education. My skills include C/C++, JavaScript, HTML/CSS, and more.</em></p>
               <ul>
                 <li>Mumbai, India</li>
                 <li>+919321808120</li>
@@ -216,7 +216,25 @@
               <h5>july 2024 - Present</h5>
               <p><em> Internship Studio </em></p>
             </div>
-            
+            <div class="resume-item">
+              <h4>Python Course</h4>
+              <h5>july 2024 - Present</h5>
+              <p><em> Youtube </em></p>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <h3 class="resume-title">Experience</h3>
+            <div class="resume-item">
+              <h4>Bridgekash International Pvt Ltd</h4>
+              <h5>May 2023 - August 2023</h5>
+              <p><em> Thane </em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Drifko</h4>
+              <h5>july 2024 - Present</h5>
+              <p><em> Remote </em></p>
+            </div>
           </div>
         </div>
     </section><!-- End Resume Section -->
